# bitcraft

./: Cargo.toml  Makefile  README.md  atomics-implementation.md  comparisons.md  implementation.md  output.md
sample/: byteval_example.rs  expanded_sample.rs  filter_expand.py  full_expanded.rs  sample.rs
scratch/: atomic_bitenum_design.rs  debug_test.rs  design.rs
src/: atomic_bitarray.rs  atomic_bitenum.rs  atomic_bitstruct.rs  bitarray.rs  bitenum.rs  bitstruct.rs  bytearray.rs  bytestruct.rs  byteval.rs  lib.rs  mod.rs  utils.rs
tests/: array_tests.rs  atomic_tests.rs  byte_tests.rs  byteval_tests.rs  debug_verify.rs  example_control_register_test.rs  example_protocol_header_test.rs  fuzz_properties.rs  new_byteval_test.rs  performance.rs  performance_atomic.rs  signed_enum_test.rs  signed_tests.rs
