[package]
name = "bitstruct"
version = "0.9.0"
edition = "2024"
license = "MIT"
description = "A zero-cost, hardware-aligned bitfield and enumeration generator."
repository = "https://github.com/dilipvamsi/bitstruct"

[dependencies]
paste = "1.0.15"
bytemuck = { version = "1.25", features = ["derive"] }

[dev-dependencies]
proptest = "1.10"
proptest-derive = "0.8"

[[example]]
name = "sample"
path = "sample/sample.rs"
