[package]
name = "bitcraft"
version = "0.9.3"
edition = "2024"
license = "MIT"
description = "A zero-cost, hardware-aligned bitfield and enumeration generator."
repository = "https://github.com/dilipvamsi/bitcraft"
homepage = "https://github.com/dilipvamsi/bitcraft"
documentation = "https://docs.rs/bitcraft"
readme = "README.md"
keywords = ["bitfield", "bitcraft", "no-std", "performance", "embedded"]
categories = ["embedded", "data-structures", "no-std"]
authors = ["Dilip Vamsi Moturi"]
rust-version = "1.85"
exclude = [
    "sample/",
    "Makefile",
    "sample/**/*.py",
]

[dependencies]
paste = "1.0.15"
bytemuck = { version = "1.25", features = ["derive"] }

[dev-dependencies]
proptest = "1.10"
proptest-derive = "0.8"
